<resources>
    <string name="app_name">Trébol</string>
    <string name="database">trebol.realm</string>
    <string name="save_data">Data was successfully saved</string>
    <string name="delete_data">Data was successfully deleted</string>
    <string name="update_data">Data was updated correctly</string>
    <string name="value_null">Cannot transform a null value</string>
    <string name="description_image">Image</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_password">Password</string>
    <string name="task_complete">Task Complete</string>
    <string name="get_complete">Get Complete</string>
    <string name="image_not_found">Image not found</string>
    <string name="file_not_found">File not found</string>
    <string name="download_complete">Download Complete</string>
    <string name="add_notifications">Success Add Notification</string>
    <string name="add_customer">Add Customer</string>
    <string name="technical_not_found">Technical not found</string>
    <string name="delete_complete">Delete Complete</string>
    <string name="list_not_found">List not found</string>
    <string name="network_not_found">Network not found</string>
    <string name="technicals_save">Success Save Technical</string>
    <string name="input_error">Fields empty, verify please</string>
    <string name="welcome">Welcome </string>
    <string name="material_save">Success Save Material</string>
    <string name="notification_download">Success Download Notification</string>
    <string name="customer_download">Success Download Customer</string>
    <string name="type_notification_save">Success Type Notification</string>
    <string name="wait_task">Wait, all tasks should be completed.</string>
    <string name="controls_enable">Controls enable.</string>
    <string name="error_download">Error download.</string>
    <string name="customer_save">Success Save Customer</string>
    <string name="notification_save">Success Save Notification</string>
    <string name="image_save">Success Save Image</string>
    <string name="change_field">change</string>
    <string name="change_good">Change is good</string>
    <string name="permission_write">"Cannot write images to external storage"</string>
    <string name="lbl_close_app">Tap again to close the application.</string>
    <string name="lbl_permission_enabled">Permission enabled.</string>
    <string name="lbl_list_ots">Listado de las OTs</string>
    <string name="lbl_announce">AVISO No</string>
    <string name="lbl_type">TIPO</string>
    <string name="lbl_name">NOMBRE</string>
    <string name="lbl_contact">CONTACTO</string>
    <string name="lbl_address">DIRECCIÓN</string>
    <string name="lbl_province">PROVINCIA</string>
    <string name="lbl_location">LOCALIDAD</string>
    <string name="lbl_phone">TELÉFONO</string>
    <string name="lbl_observation">SÍNTOMAS</string>
    <string name="lbl_client">CLIENTE</string>
    <string name="lbl_of">DE</string>
    <string name="lbl_cc">CC</string>
    <string name="lbl_for">PARA</string>
    <string name="lbl_email">CORREO ELECTRÓNICO</string>
    <string name="lbl_subject">ASUNTO</string>
    <string name="lbl_clip">ADJUNTO</string>
    <string name="lbl_mesage">MENSAJE</string>
    <string name="lbl_comercial">COMERCIAL</string>
    <string name="lbl_mod">MODELO</string>
    <string name="lbl_contract">CONTRATO</string>
    <string name="lbl_serie">No. SERIE</string>
    <string name="lbl_server">IP Server: </string>
    <string name="lbl_port">Port: </string>
    <string name="lbl_name_database">Name Database</string>
    <string name="lbl_user_database">User Database</string>
    <string name="lbl_password_database">Password Database</string>
    <string name="lbl_tinta">TINTA</string>
    <string name="lbl_hrs_trabajo">HORAS DE TRABAJO</string>
    <string name="lbl_peaje">PEAJE</string>
    <string name="lbl_sat">SAT</string>
    <string name="lbl_satdk">SATDK</string>
    <string name="lbl_entrada">HORA DE ENTRADA</string>
    <string name="lbl_salida">HORA DE SALIDA</string>
    <string name="lbl_dieta">DIETA</string>
    <string name="lbl_vsoft">VSOFT EQUIPO</string>
    <string name="lbl_hrs">REV. CADA HORAS</string>
    <string name="lbl_equipo_totales">H. TOTALES EQUIPO</string>
    <string name="lbl_ult_mnto">H. DESDE ÚLT. MNTO.</string>
    <string name="lbl_sintomas">SÍNTOMAS</string>
    <string name="lbl_informe_tec">INFORME TÉCNICO/OBSERVACIONES</string>
    <string name="lbl_material_retirado">MATERIAL RETIRADO</string>
    <string name="lbl_material_empleado">MATERIAL EMPLEADO</string>
    <string name="lbl_firma">FIRMA CLIENTE</string>
    <string name="lbl_fecha">FECHA</string>
    <string name="lbl_logo">LOGO</string>
    <string name="lbl_title_materiales">Lista de Materiales</string>
    <string name="lbl_hint_search">Código Material(3)</string>
    <string name="lbl_orden_de_trabajo">Orden de Trabajo</string>
    <string name="lbl_nombre_cliente">NOMBRE CLIENTE</string>
    <string name="lbl_nombre_tecnico">NOMBRE TÉCNICO</string>
    <string name="lbl_satd">SATD</string>
    <string name="lbl_salir">Salir</string>
    <string name="lbl_ver_ots">Ver OTs</string>
    <string name="lbl_del_pended">Eliminar Pendientes</string>
    <string name="lbl_new_user">Nuevo Usuario</string>
    <string name="lbl_machine">MÁQUINA</string>
    <string name="lbl_num_serie">N. SERIE</string>
    <string name="lbl_date_finish">FECHA REALIZACIÓN</string>
    <string name="lbl_finish_install">FÍN DE INSTALACIÓN</string>
    <string name="lbl_config_server">Server Configuration</string>
    <string name="lbl_name_client">NOMBRE CLIENTE</string>
    <string name="lbl_report">Trebol Reporte</string>
    <string name="lbl_confirm">Confirmar</string>
    <string name="lbl_not_confirm">Rechazar</string>
    <string name="lbl_cancel">Cancelar</string>
    <string name="lbl_error">Trebol Error</string>
    <string name="lbl_get_maintenance">Get maintenance complete.</string>
    <string name="lbl_save_maintenance">Create maintenance complete.</string>
    <string name="lbl_end_instalation">ACEPTACION DE FINALIZACION \nDE LA INSTALACION</string>
    <string name="new_filter">New Filter</string>
    <string name="address_empty">Address empty. Verify.</string>
    <string name="lbl_delete_data">The data was delete. Is you sure?</string>
    <string name="lbl_update_notification_data"> The master tables was updated. Next push "Recibir" for update the Work orders. </string>
    <string name="lbl_download_notification">Downlod Notifications</string>
    <string name="lbl_connect_server">Connect Server OK.</string>
    <string name="lbl_not_connect_server">Error Not Connect Server.</string>
    <string name="lbl_finish_process">Finish process.</string>
    <string name="lbl_tab_verify">Verification</string>
    <string name="lbl_tab_maintenance">Maintenance</string>
    <string name="lbl_tab_test">Test</string>
    <string name="lbl_tab_observations">Observations</string>
    <string name="lbl_tab_report">Report technical</string>
    <string name="lbl_signature_technical">FIRMA TECNICO</string>
    <string name="lbl_signature_client">FIRMA CLIENTE</string>
    <string name="lbl_title_veridication">GUÍA DE MANTENIMIENTO HITACHI INKJET</string>
    <string name="lbl_part">No. PARTE</string>
    <string name="lbl_note">Las revisiones de los equipos se deben realizar según las horas indicadas por el instalador o, al menos, una vez al año.</string>
    <string name="lbl_verification_visual">1. VERIFICACIÓN VISUAL</string>
    <string name="lbl_maintenance_visual">2. MANTENIMIENTO</string>
    <string name="lbl_test_visual">3. TEST POSTERIOR AL MANTENIMIENTO</string>
    <string name="lbl_know_visual">4. CONOCIMIENTOS DEL USUARIO</string>
    <string name="lbl_tech_observations">Observaciones del técnico</string>
    <string name="lbl_build_reference">Oficinas centrales:\nNicolas Mórales. 38 40, 3 Nave 9 28019 Madrid\nTel: +34915398142 Fax: +34914670038\ntrebolgroup@trebolgroup.com www.trebolgroup.com\nCIF: 8 83198705</string>
    <string name="lbl_footer">Delegaciones: Madrid Catalunya Levante Andalucia P.Vasco Galicia Navarra Murcia Canarias Lisboa Oporto</string>
</resources>
