<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sv_tab_pdf"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_options">

            <ImageView
                android:id="@+id/iv_logo"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="2%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="50%"
                android:src="@drawable/logo_claim"
                android:scaleType="fitXY"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lbl_logo"/>

            <TextView
                android:id="@+id/tv_title"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="1%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="65%"
                android:layout_below="@+id/iv_logo"
                android:layout_height="wrap_content"
                android:text="@string/lbl_title_veridication"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textAlignment="textStart"/>

            <ImageView
                android:id="@+id/img_right"
                app:layout_marginRightPercent="4%"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/iv_logo"
                app:layout_widthPercent="20%"
                android:src="@drawable/hitachi_pdf"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lbl_logo"/>
            <TextView
                android:id="@+id/tv_client"
                app:layout_marginLeftPercent="4%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="10%"
                android:layout_below="@+id/tv_title"
                android:layout_height="wrap_content"
                android:text="@string/lbl_client"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/tv_name"
                app:layout_marginLeftPercent="1%"
                android:layout_alignTop="@+id/tv_client"
                android:layout_toEndOf="@+id/tv_client"
                app:layout_widthPercent="35%"
                android:layout_below="@+id/tv_title"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/tv_part"
                app:layout_marginLeftPercent="1%"
                android:layout_alignTop="@+id/tv_client"
                android:layout_toEndOf="@+id/tv_name"
                app:layout_widthPercent="10%"
                android:layout_below="@+id/tv_title"
                android:text="@string/lbl_part"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>
            <TextView
                android:id="@+id/tv_number_part"
                app:layout_marginLeftPercent="1%"
                android:layout_alignTop="@+id/tv_client"
                android:layout_toEndOf="@+id/tv_part"
                app:layout_widthPercent="35%"
                app:layout_marginRightPercent="4%"
                android:layout_below="@+id/tv_title"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/tv_serie"
                app:layout_marginLeftPercent="4%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="10%"
                android:layout_below="@+id/tv_client"
                android:layout_height="wrap_content"
                android:text="@string/lbl_serie"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/tv_number_serie"
                app:layout_marginLeftPercent="1%"
                android:layout_alignTop="@+id/tv_serie"
                android:layout_toEndOf="@+id/tv_serie"
                app:layout_widthPercent="35%"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/tv_date"
                app:layout_marginLeftPercent="1%"
                android:layout_alignTop="@+id/tv_serie"
                android:layout_toEndOf="@+id/tv_number_serie"
                app:layout_widthPercent="10%"
                android:text="@string/lbl_fecha"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>
            <TextView
                android:id="@+id/tv_value_date"
                app:layout_marginLeftPercent="1%"
                android:layout_alignTop="@+id/tv_serie"
                android:layout_toEndOf="@+id/tv_date"
                app:layout_marginRightPercent="4%"
                app:layout_widthPercent="35%"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/tv_note"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="4%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="100%"
                android:text="@string/lbl_note"
                android:layout_below="@+id/tv_serie"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>
            <TextView
                android:id="@+id/tv_tab_verification"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="2%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="50%"
                android:text="@string/lbl_verification_visual"
                android:layout_below="@+id/tv_note"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>
            <TextView
                app:layout_marginRightPercent="4%"
                app:layout_widthPercent="50%"
                android:text="@string/lbl_test_visual"
                android:layout_alignTop="@+id/tv_tab_verification"
                android:layout_toEndOf="@+id/tv_tab_verification"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>
            <ImageView
                android:id="@+id/iv_verification"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="2%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="50%"
                android:layout_below="@+id/tv_tab_verification"
                android:scaleType="fitXY"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lbl_logo"/>
            <ImageView
                android:id="@+id/iv_test"
                app:layout_marginRightPercent="4%"
                android:layout_alignTop="@+id/iv_verification"
                android:layout_toEndOf="@+id/iv_verification"
                app:layout_widthPercent="50%"
                android:scaleType="fitXY"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lbl_logo"/>
            <TextView
                android:id="@+id/tv_tab_maintenance"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="2%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="50%"
                android:text="@string/lbl_maintenance_visual"
                android:layout_below="@+id/iv_test"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>
            <TextView
                app:layout_marginRightPercent="4%"
                app:layout_widthPercent="50%"
                android:text="@string/lbl_know_visual"
                android:layout_alignTop="@+id/tv_tab_maintenance"
                android:layout_toEndOf="@+id/tv_tab_maintenance"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>

            <ImageView
                android:id="@+id/iv_maintenance"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="2%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="50%"
                android:layout_below="@+id/tv_tab_maintenance"
                android:scaleType="fitXY"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lbl_logo"/>
            <ImageView
                android:id="@+id/iv_know"
                app:layout_marginRightPercent="4%"
                android:layout_alignTop="@+id/iv_maintenance"
                android:layout_toEndOf="@+id/iv_maintenance"
                app:layout_widthPercent="50%"
                android:scaleType="fitXY"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lbl_logo"/>
            <TextView
                android:id="@+id/tv_lbl_description"
                app:layout_marginRightPercent="4%"
                app:layout_widthPercent="50%"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_tech_observations"
                android:layout_below="@+id/iv_know"
                android:layout_alignStart="@id/iv_know"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>
            <TextView
                android:id="@+id/tv_observations"
                app:layout_marginRightPercent="4%"
                app:layout_widthPercent="50%"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_tech_observations"
                android:layout_below="@+id/tv_lbl_description"
                android:layout_alignStart="@id/tv_lbl_description"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:background="@drawable/rounded_pass"
                android:textAlignment="textStart"/>
            <TextView
                android:id="@+id/tv_signature_technical"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="2%"
                app:layout_widthPercent="50%"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_signature_technical"
                android:layout_below="@+id/iv_maintenance"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>
            <TextView
                app:layout_marginRightPercent="4%"
                app:layout_widthPercent="50%"
                android:text="@string/lbl_signature_client"
                android:layout_alignTop="@+id/tv_signature_technical"
                android:layout_toEndOf="@+id/tv_signature_technical"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size"
                android:textAlignment="textStart"/>
            <ImageView
                android:id="@+id/iv_signature_technical"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="2%"
                android:layout_marginTop="10dp"
                app:layout_widthPercent="45%"
                android:layout_below="@+id/tv_signature_technical"
                android:layout_height="200dp"
                android:contentDescription="@string/lbl_logo"/>
            <ImageView
                android:id="@+id/iv_signature_client"
                app:layout_marginRightPercent="4%"
                android:layout_alignTop="@+id/iv_signature_technical"
                android:layout_toEndOf="@+id/iv_signature_technical"
                app:layout_widthPercent="50%"
                android:layout_height="200dp"
                android:contentDescription="@string/lbl_logo"/>

            <!--<ImageView
                android:id="@+id/iv_logo"
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="2%"
                android:layout_marginTop="15dp"
                app:layout_widthPercent="50%"
                android:layout_below="@+id/iv_signature_technical"
                android:src="@drawable/logo_claim"
                android:scaleType="fitXY"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lbl_logo"/>-->

            <TextView
                android:id="@+id/tv_reference"
                app:layout_marginLeftPercent="4%"
                app:layout_widthPercent="50%"
                android:text="@string/lbl_build_reference"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/iv_signature_technical"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                android:textAlignment="textStart"/>
            <TextView
                app:layout_marginLeftPercent="4%"
                app:layout_marginRightPercent="4%"
                app:layout_widthPercent="100%"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_footer"
                android:layout_below="@+id/tv_reference"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                android:textAlignment="center"/>

        </android.support.percent.PercentRelativeLayout>

    </ScrollView>
</RelativeLayout>
