<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_options"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_one_guideline"
            app:layout_constraintGuide_percent=".25"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.95"
            android:orientation="horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            android:textSize="12sp"
            android:textColor="@color/colorLblTitle"
            android:textAlignment="center"
            android:id="@+id/tv_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/left_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:text="@string/lbl_client"
            android:textColor="@color/colorLblSubTitle"
            android:textAlignment="textStart"
            android:id="@+id/tv_lbl_client"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/colorTxt"
            android:textAlignment="textStart"
            android:id="@+id/tv_client"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/left_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_client"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_of"
            android:textSize="12sp"
            android:textColor="@color/colorLblSubTitle"
            android:textAlignment="textStart"
            android:id="@+id/tv_lbl_of"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_client"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/colorTxt"
            android:textAlignment="textStart"
            android:id="@+id/tv_of"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/left_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_of"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_cc"
            android:textSize="12sp"
            android:textColor="@color/colorLblSubTitle"
            android:textAlignment="textStart"
            android:id="@+id/tv_lbl_cc"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_of"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/colorTxt"
            android:textAlignment="textStart"
            android:id="@+id/tv_cc"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_cc"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_for"
            android:textSize="12sp"
            android:textColor="@color/colorLblSubTitle"
            android:textAlignment="textStart"
            android:id="@+id/tv_for"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="28dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_for"
            android:layout_marginTop="10dp"
            android:hint="@string/lbl_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp"
            android:background="@drawable/rounded_pass"
            android:textColor="@color/colorTxt"
            android:textAlignment="textStart"
            android:id="@+id/et_for"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/left_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_for"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_subject"
            android:textSize="12sp"
            android:textColor="@color/colorLblSubTitle"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_for"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/colorTxt"
            android:textAlignment="textStart"
            android:id="@+id/tv_subject"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/left_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_subject"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_clip"
            android:textSize="12sp"
            android:textColor="@color/colorLblSubTitle"
            android:textAlignment="textStart"
            android:id="@+id/tv_lbl_clip"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_subject"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/colorTxt"
            android:textAlignment="textStart"
            android:id="@+id/tv_clip"/>

        <EditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_pass"
            android:gravity="top"
            android:hint="@string/lbl_mesage"
            android:inputType="textMultiLine"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:scrollbars="vertical"
            android:textColor="@color/colorTxt"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_clip"
            android:importantForAutofill="no" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_message"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/bt_send_email"
            android:background="@drawable/send_email"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>